# py-author

./: .coveragerc  .markdownlint.yaml  LICENSE  pyproject.toml  setup.cfg  setup.py
py_author/: objects.py  text.py
py_author/test/: scene0.py
