[metadata]
name = py-author
author = Arnav Doss
author_email = arnavdoss@gmail.com
license = MIT
description = "Python library for writing stories"
description-file = README.md
url = https://github.com/arnavdoss/py-author
classifiers =
    Development Status :: 1 - Alpha
    Operating System :: OS Independen
    Programming Language :: Python :: 3
    Topic :: Writing

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    pandas
    plotly

[options.extras_require]
lint = 
    black[jupyter]
    flake8
    isort
    mypy
    pydocstyle
test =
    nbmake
    pytest
    pytest-cov
docs =
    IPython
    myst-parser
    sphinx
    sphinx-multiversion
dev = 
    %(lint)s
    %(test)s
    %(docs)s

[tool:pytest]
addopts =
    # Define where to run (defaults to root level)
    --cov py_hydyn
    # HTML test report for docs
    --cov-report html:build/coverage
    # Terminal, print missing lines
    --cov-report term-missing
    # Detailed output
    --verbose

python_files = test_*.py
testpaths = py_author

[tool.black]
line-length = 88

[flake8]
max-line-length = 88
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    # module level import not at top of file
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503

exclude=
    .eggs
    docs
    build

[isort]
profile = black
skip_gitignore = true
float_to_top = true
default_section = THIRDPARTY
known_first_party = py_author

[pydocstyle]
# Initially the convention 'Numpy' was adhered to. We only ignore the requirement that
# class inits require a docstring. To do this, the numpy convention requirement is
# replaced with a explicit definition which corresponds to the numpy convention with the
# addition of D107
# See:  http://www.pydocstyle.org/en/stable/error_codes.html#default-conventions
# convention=numpy
ignore = D107,D203,D212,D213,D402,D413,D415,D416,D417
match = .*\.py

[mypy]
exclude = docs|build
files = .
show_error_codes = True
ignore_missing_imports = True